<resources>
    <string name="app_name">MariBerhitung</string>
    <string name="_0">0</string>
    <string name="hitung">Hitung</string>
    <string name="masukkan_angka_pertamamu">Masukkan angka pertamamu..</string>
    <string name="masukkan_angka_keduamu">Masukkan angka keduamu..</string>

    <string-array name="sp_aritmatika">
        <item>--- Pilih operasinya ---</item>
        <item>x</item>
        <item>/</item>
        <item>+</item>
        <item>-</item>
        <item>%</item>
    </string-array>
    <string name="tentangAplikasiButton">Tentang Aplikasi</string>


    <string name="tentang_aplikasi">kalkulator adalah alat untuk menghitung dari perhitungan sederhana
        seperti penjumlahan, pengurangan, perkalian dan pembagian Cobalah untuk menghitung menggunakan
        kalkulator ini, asal jangan menghitung kebaikan orang lain ya. Mesin hitung atau kalkulator adalah
        alat untuk menghitung dari perhitungan sederhana seperti penjumlahan, pengurangan, perkalian dan
        pembagian sampai kepada kalkulator ilmiah yang dapat menghitung rumus matematika tertentu.\n\nAplikasi
        ini dibuat untuk asessmen2\n\nCopyright © 2023 Abdul Raihan.\nAll rights reserved.</string>

    <string name="profile"> Perkenalkan saya Abdul Raihan biasa dipanggil abray, saya berumur 19 tahun dan saya
        adalah seorang android developer yang membuat aplikasi kalkulator ini untuk membantu user
        dalam melakukan perhitungan. silahkan dicoba!</string>

    <string name="bagikan">Bagikan</string>
    <string name="bagikan_template">hasil: %1$.2f</string>

    <string name="belum_ada_data">Belum ada data</string>

    <string name="histori">Histori</string>

    <string name="hasil_x">hasil: %1$.2f</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="koneksi_error">Koneksi error</string>

    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data hewan otomatis</string>

    <string name="notif_title">Ada notifikasi baru!</string>
    <string name="notif_text">Cek dulu yuk siapa tau penting..</string>
</resources>