<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_angka_pertamamu"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:id="@+id/et_angka1"
        android:inputType="number"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_angka_keduamu"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:id="@+id/et_angka2"
        android:inputType="number"
        />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:id="@+id/sp_aritmatika"
        android:entries="@array/sp_aritmatika"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/hitung"
        android:id="@+id/btn_Hitung"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:id="@+id/tv_hasil"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textSize="100pt"
        android:textColor="@color/cardview_dark_background"
        />




</LinearLayout>
